Création du page d'accueil

--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "animal",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,5 +9,14 @@
   "license": "ISC",
   "dependencies": {
     "bootstrap": "^5.3.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/a2kad/animals.git"
+  },
+  "bugs": {
+    "url": "https://github.com/a2kad/animals/issues"
+  },
+  "homepage": "https://github.com/a2kad/animals#readme",
+  "description": ""
 }
